--- a/css/agency.css
+++ b/css/agency.css
@@ -262,10 +262,12 @@ fieldset[disabled] .btn-xl.active {
 }
 
 header {
+    background-color: #333;
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/header-bg.jpg);
+    /* background-image: url(../img/header-bg.jpg); */
+    background-color: #333;
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
